fixing set option overlap on iOS

--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,7 @@ button.rhythm, button.note {
 #notes {
     position: absolute;
     right: 10px;
-    top: 40px;
+    top: 35px;
     width: 100px;
 }
 
@@ -143,7 +143,7 @@ button.rhythm, button.note {
 }
 
 #presets {
-    height: 250px;
+    height: 235px;
     overflow: hidden;
     float: right;
 }
